Merged revisions 80159 via svnmerge from svn+ssh://pythondev@svn.python.org/python/branches/py3k

........
  r80159 | victor.stinner | 2010-04-18 02:00:44 +0200 (dim., 18 avril 2010) | 3 lines

  Issue #8394: _ctypes.dlopen() accepts bytes, bytearray and str with
  surrogates.
........